--- a/index.html
+++ b/index.html
@@ -50,6 +50,63 @@
                 </div>
                 <div class="col-12  col-md-4">
                     <h1 class="cabin-bold">PIZZA AL ESTILO CHICAGO CON ESPINACAS Y CHAMPIÑONES</h1>
+                    <hr class="bold-hr">
+                    <p class="cabin-bold">110 MIN / 6 A 8 PORCIONES</p>
+                    <button type="button" class="btn btn-outline-secondary cabin-400 text-dark">Enviar por correo</button>
+                    <button type="button" class="btn btn-outline-secondary cabin-400 text-dark" >Añadir a favoritos</button>
+                </div>
+            </div>
+            <!-- seccion carousel -->
+            <div class="row mt-5 mb-5 d-none d-sm-block ">
+                <div class="col-12">
+                    <div id="carouselExampleIndicators" class="carousel slide">
+                        <div class="carousel-indicators">
+                            <button type="button" class="active" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <img src="assets/img/slider-1.png" class="img-fluid" alt="Slide 1">
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <img src="assets/img/slider-2.png" class="img-fluid" alt="Slide 2">
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <img src="assets/img/slider-3.png" class="img-fluid" alt="Slide 3">
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <img src="assets/img/slider-4.png" class="img-fluid" alt="Slide 4">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <img src="assets/img/slider-5.png" class="img-fluid" alt="Slide 5">
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <img src="assets/img/slider-6.png" class="img-fluid" alt="Slide 6">
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <img src="assets/img/slider-7.png" class="img-fluid" alt="Slide 7">
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <img src="assets/img/slider-8.png" class="img-fluid" alt="Slide 8">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
