--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                     <button type="button" class="btn btn-outline-secondary cabin-400 text-dark" >Añadir a favoritos</button>
                 </div>
             </div>
-            <!-- seccion carousel -->
+
+            <!-- seccion carousel-->
             <div class="row mt-5 mb-5 d-none d-sm-block ">
                 <div class="col-12">
                     <div id="carouselExampleIndicators" class="carousel slide">
@@ -65,6 +66,7 @@
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         </div>
                         <div class="carousel-inner">
+                            <!-- Item carousel 1-->
                             <div class="carousel-item active">
                                 <div class="row">
                                     <div class="col-sm-3">
@@ -81,6 +83,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- Item carousel 2-->
                             <div class="carousel-item">
                                 <div class="row">
                                     <div class="col-sm-3">
@@ -109,7 +112,79 @@
                     </div>
                 </div>
             </div>
+            <hr class="bold-hr">
         </section>
+        <!-- Inicio Recetas -->
+        <section class="mt-3">
+            <div class="row">
+                <div class="col-6">
+                    <h5 class="cabin-400">
+                        <u> INGREDIENTES </u>
+                    </h5>
+                    <p>Masa</p>
+                    <ul class="list-unstyled">
+                        <li>20 gr de levadura seca instantánea</li>
+                        <li>1 cucharadita de azúcar</li>
+                        <li>500 ml agua tibia</li>
+                        <li>100 ml aceite vegetal</li>
+                        <li>4 cucharadas de aceite de oliva</li>
+                        <li>65 gr harina de maíz fina (chuchoca)</li>
+                        <li>2 cucharaditas de sal</li>
+                        <li>625 gr harina</li>
+                        <li>Salsa</li>
+                    </ul>
+                    <ul class="list-unstyled mt-4">
+                        <li>5 cucharadas de aceite de oliva</li>
+                        <li> ½ cebolla picada en cubos finos</li>
+                        <li>2 cucharaditas de sal</li>
+                        <li>3 cucharadas de Orégano Gourmet</li>
+                        <li>1 ½ cucharadas de Albahaca Gourmet</li>
+                        <li>2 tarro de tomates en cubos al natural</li>
+                        <li>2 cucharaditas de azúcar</li>
+                        <li>Relleno </li>
+                    </ul>
+                </div>
+                <div class="col-6">
+                    <h5 class="cabin-400">
+                        <u> PREPARACIÓN </u>
+                    </h5>
+                    <p class="cabin-400 mt-5">
+                        1. Para la masa, disolver la levadura y el azúcar en agua tibia en un bol grande. Dejar reposar 2 minutos.
+                        Agregar el aceite, la harina de maíz, sal y 400gr de harina. Mezclar bien. Amasar y agregar el resto de harina,
+                        la cantidad necesaria para tener una masa blanda. Poner en el mesón y amasar por 5 minutos o hasta tener una masa lisa y elástica
+                        (agregar harina en el mesón a medida que se va amasando para que la masa no se pegue) . Poner la masa en un bol aceitado,
+                        tapar con un paño de cocina limpio y dejar reposar hasta que la masa duplique su volumen (leudar).
+                        Golpear la masa para que baje y luego dejar leudar por 40 minutos adicionales.
+                    </p>
+                    <p class="cabin-400">
+                        2. Mientras tanto preparar la salsa: Calentar 4 cucharadas de aceite en una olla a fuego medio.
+                        Agregar la cebolla, Orégano Gourmet, Albahaca Gourmet, sal y cocinar hasta que la cebolla esté dorada.
+                        Agregar el ajo y cocinar por 30 segundos. Agregar los tomates junto al jugo del tarro, a la mezcla de cebolla.
+                        Agregar el azúcar y cocinar hasta que la mezcla se haya reducido y espesado, como 30 minutos. Sazonar con sal y pimienta a gusto.
+                    </p>
+                    <p class="cabin-400">
+                        3. Relleno: Cocinar las chalotas en el aceite de oliva hasta que estén transparentes.
+                        Agregar los champiñones y las espinacas, cocinar hasta que estén cocidos y 
+                        se haya evaporado todo el líquido que hayan votado los vegetales. Reservar.
+                    </p>
+                    <p class="cabin-400">4. Calentar el horno a 220C.</p>
+                    <p class="cabin-400">
+                        5. Una vez que la masa haya reposado, dividirla en dos bolas. 
+                        Estirar cada masa para cubrir dos moldes (desmontables) de 26 cm, hacer un borde de 5 cm con la masa.
+                        Dividir el relleno entre las dos pizza, tapar con el queso mozarella, luego terminar con la salsa de tomates y
+                        finalmente espolvorear el queso rallado.
+                    </p>
+                    <p class="cabin-400">
+                        6. Hornear por 35 a 40 minutos o hasta que el relleno esté caliente y la base esté esponjosa y dorada.
+                        Esperar unos minutos antes de desmoldar.
+                    </p>
+                </div>
+                <hr class="bold-hr">
+            </div>
+
+        </section>
+
+
     </main>
 
     <!-- Jquery -->
