--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <hr class="bold-hr">
                     <p class="cabin-bold">110 MIN / 6 A 8 PORCIONES</p>
                     <div class="d-flex justify-content-start">
-                        <button type="button" class="btn btn-outline-secondary cabin-400 text-dark me-4">Enviar por correo</button>
+                        <button type="button" class="btn btn-outline-secondary cabin-400 text-dark me-4" id="sendMail">Enviar por correo</button>
                         <button type="button" class="btn btn-outline-secondary cabin-400 text-dark ms-4" >Añadir a favoritos</button>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <h5 class="cabin-400">
-                        <u> INGREDIENTES </u>
+                        <u id="ingredientes"> INGREDIENTES </u>
                     </h5>
                     <p>Masa</p>
                     <ul class="list-unstyled">
@@ -148,7 +148,7 @@
                 </div>
                 <div class="col-12 col-md-6 ">
                     <h5 class="cabin-400">
-                        <u> PREPARACIÓN </u>
+                        <u id="preparacion"> PREPARACIÓN </u>
                     </h5>
                     <p class="cabin-400 mt-5">
                         1. Para la masa, disolver la levadura y el azúcar en agua tibia en un bol grande. Dejar reposar 2 minutos.
@@ -254,7 +254,7 @@
     <script
     src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"crossorigin="anonymous"></script>
     <!-- js -->
-    <script src="assets/js/tabla.js"></script>
+    <script src="assets/js/script.js"></script>
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script> 
